--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heygen/streaming-avatar": "^2.0.16",
+    "lucide-react": "^0.533.0",
+    "qs": "^6.14.0",
+    "react-icons": "^5.5.0",
+    "react-input-mask": "^2.0.4",
+    "react-jotform-embed": "^1.1.3",
+    "react-router-dom": "^7.7.1",
+    "sweetalert2": "^11.22.2",
     "axios": "^1.11.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
